# polytech-spb-labs

./: README.md
OOP/: README.md
OOP/ToDoList/: App.cpp  MainFrame.cpp  MainFrame.h  Task.cpp  Task.h  date.txt  tasks.txt
OOP/mfc/Draw/: Draw.aps  Draw.cpp  Draw.h  Draw.rc  Draw.vcxproj  Draw.vcxproj.filters  DrawDlg.cpp  DrawDlg.h  resource.h
OOP/mfc/FourUp/: FourUp.aps  FourUp.cpp  FourUp.h  FourUp.rc  FourUp.vcxproj  FourUpDlg.h  (+3 more)
OOP/stl/: README.md
OOP/stl/lab_1/: CMakeLists.txt  task1.cpp
algorithms-and-data-structures/: README.md
algorithms-and-programming/: README.md
algorithms-and-programming/lab_1/: Makefile
automata-theory/: README.md  task.txt
computational-math/: README.md
computational-math/lab_1/: Makefile
computational-math/lab_2/: Makefile
computational-math/lab_3/: Makefile
computational-math/lab_4/: Makefile
computer-architecture/first-semester/: README.md
computer-architecture/second-semester/: README.md
discrete-math/: README.md
math-modeling/: README.md
math-modeling/lab_1/: lab_1_report.docx
math-modeling/lab_2/: lab_2_report.docx
math-modeling/lab_3/: lab_3_report.docx
math-modeling/lab_4/: lab_4_report.docx
programming-technology/: README.md
programming-technology/lab_1/: CMakeLists.txt  task_16.cpp
programming-technology/lab_2/: CMakeLists.txt  main.cpp  task2.cpp
programming-technology/lab_3/: CMakeLists.txt  main.cpp  task.cpp
programming-technology/lab_4/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
programming-technology/tasks/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
(+129 files in other folders)
